# edgar-rust-api

./: Cargo.toml  README.md  coverage_progress.csv  discovered_tags.json  recheck_progress.json  remap_progress.json  review_progress.json
.claude/: settings.local.json
examples/: amzn_expenses.rs  amzn_tags.rs  amzn_tags2.rs  amzn_tags3.rs  basic_lookup.rs  coverage_all.rs  coverage_compare.rs  coverage_gaps.rs  rd_expense.rs  recheck_tags.rs  remap_tags.rs  review_tags.rs  scan_all_tags.rs  scan_rd_tags.rs  standardized_financials.rs  watch_filings.rs
src/: error.rs  lib.rs
src/api/: bulk.rs  company_concept.rs  company_facts.rs  feeds.rs  frames.rs  index.rs  mod.rs  search.rs  submissions.rs  tickers.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: bulk.rs  company.rs  financials.rs  frames.rs  mod.rs  search.rs  watch.rs
src/client/: cache.rs  http.rs  mod.rs
src/models/: cik.rs  company.rs  company_concept.rs  company_facts.rs  feed.rs  filing.rs  filing_index.rs  filing_type.rs  frame.rs  mod.rs  period.rs  search.rs  submission.rs  ticker.rs
src/standardizer/: coverage.rs  dedup.rs  engine.rs  learned_tags.rs  llm_classifier.rs  mod.rs  output.rs  period_align.rs  resolution.rs
src/standardizer/catalog/: balance_sheet.rs  cash_flow.rs  income_statement.rs  mod.rs  per_share.rs  ratios.rs
src/standardizer/catalog/sector/: banks.rs  insurance.rs  mod.rs  (+1 more)
src/watcher/: events.rs  filter.rs  mod.rs  poller.rs
tests/: dedup_test.rs  models_test.rs  standardizer_test.rs
tests/fixtures/: company_facts_sample.json  company_tickers_sample.json
