[package]
name = "edgar-lib"
version = "0.1.0"
edition = "2021"
description = "Comprehensive Rust library and CLI for SEC EDGAR API"
license = "MIT"

[[bin]]
name = "edgar"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
governor = "0.8"
moka = { version = "0.12", features = ["future"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
zip = "2"
flate2 = "1"
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"
csv = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.26", features = ["derive"] }
nonzero_ext = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
